# Then

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
THIRD_PARTY_LICENSES/: Vivliostyle-NOTICE.md
docs/: AST_MANAGEMENT_POLICY.md  CODEMIRROR_JAPANESE_IME_BULLET_INPUT_INVESTIGATION.md  CODEMIRROR_SILKDOWN_MIGRATION_PLAN.md  CURRENT_STATE.md  FOLDER_DELETE_TRASH_CHECKPOINT_AST_PLAN.md  IDEA_CANVAS_REQUIREMENTS.md  IMPLEMENTATION_PLAN_0.2.0.md  JISAGE.md  NEXT_SESSION_BREADCRUMB_FILE_MANAGEMENT.md  NEXT_SESSION_MILKDOWN.md  REFACTOR_UI_REFRESH_DESIGN_0.2.0.md  RELEASE_CHECKLIST.md  REQUIREMENTS_GAP_LIST.md  THEN_IMPLEMENTATION_PLAN.md  USER_MANUAL.md  VERTICAL_EDITOR_ARCHITECTURE_REBOOT.md  VERTICAL_TYPEWRITER_SCROLL_APPROACHES.md  brew_workspace_scratch_design.md  checkpoint-studio-mockup-v2.html  checkpoint-studio-mockup.html  idea-redesign-mockup.html  idea-thread-mockup.html  then-ui-mockup-v2.html  then_workking_pdf.md  then_workking_pdf_scenario.md  workspace-switcher-mockup.html
dummy/: dummy-01.md  dummy-19.md  dummy-36.md
reference/: markdown_editor_mockup_v3.html
scripts/: capture-ui.mjs  export-fixture.ts  run-webview-export-qa.mjs  test-heading-dnd-ui.mjs  test-heading-move.mjs  verify-export.mjs
src/: App.css  App.tsx  CanvasWindowApp.tsx  ExportWindowApp.tsx  VerticalTextEditor.tsx  canvasTypes.ts  main.tsx  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+88 files in other folders)
