[package]
name = "brew"
version = "0.2.3"
description = "Markdown writing editor with snippets"
authors = ["local"]
edition = "2021"

[lib]
name = "brew_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Graphics_Gdi"] }
