[package]
name = "Then"
version = "0.4.4"
description = "Then vertical writing editor"
authors = ["local"]
edition = "2021"

[lib]
name = "brew_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
webview2-com = "=0.38.2"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_Shell"] }
